@@ -1,0 +1,6 @@
+Usage Examples:
+
+Fetch pdb 2bfu and generate the biomolecular assembly:
+    
+  $ biomolecule.py 2bfu
+
