@@ -46,6 +46,8 @@ Release 0.6 (in development)
 **Changes**:
  
   * :class:`PDBlastRecord` is renamed as :class:`~proteins.PDBBlastRecord`. 
+  * :class:`~dynamics.NMABase` instances can be index using a list or tuple of 
+    integers, e.g. ``anm[1,3,5]``.
 
 **Bugfixes**:
     
